UPDATED: Div Class

--- a/FrontEnd2/templates/class.html
+++ b/FrontEnd2/templates/class.html
@@ -14,5 +14,6 @@
 
     <input type="submit" name="submit" value="submit" />
 </form>
+<div><center>{{ prediction_text }}</center></div>
 </body>
 </html>
