ADDED: Results on Same Page (Refresh Issue)

--- a/templates/MLpg.html
+++ b/templates/MLpg.html
@@ -23,7 +23,11 @@
 							<input type="text" placeholder="email" name="email" value="">
 							<input name="password" id="password" type="password" placeholder="Password ">&nbsp;&nbsp;
 							<span id="result"></span>
-							<p id="password-strength-text"></p>
+
+
+							<div><center>{{ password_res }}</center></div>
+
+
 							<input type="submit" name="signup-button" value="submit">
 						</form>
 					</div>
