Complete Connection Code in FrontEnd2

--- a/FrontEnd2/templates/class.html
+++ b/FrontEnd2/templates/class.html
@@ -12,9 +12,9 @@
 
 body {
     padding: 2.5em 2em 0em;
-    background: #f5f7f9;
+    background:pink;
         font-size: 1.5em;
-        color: #346;
+        color:red;
         font-family: Signika, -apple-system, sans-serif;
 }
 
@@ -83,7 +83,8 @@ meter[value="4"]::-moz-meter-bar { background: green; }
 
     </style>
 </head>
-<body>
+<body bgcolor="yellow">
+
 <form method="POST">
     <div class="container">
         <label for="password">Enter Password</label>
