--- a/templates/MLpg.html
+++ b/templates/MLpg.html
@@ -1,10 +1,11 @@
 <!DOCTYPE HTML>
-<html>
+<html xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
 
 <head>
 	<title>Password strength checker</title>
 <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro|Open+Sans+Condensed:300|Raleway' rel='stylesheet'
 		type='text/css'>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/zxcvbn/4.2.0/zxcvbn.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="{{ url_for('static', filename='cssfile.css') }}" />
     <script src="{{ url_for('static', filename='password.js') }}"></script>
@@ -23,6 +24,9 @@
 					</div>
 					<div class="right-box">
 						<span class="signwith">Checking<br />Password Strength</span>
+						<span class="resulthead"><center>Generic Strength</center></span>
+						<span class="result" id="generic"><center></center></span>
+						<span class="resulthead"> <center>Smart Strength</center></span>
 						<span class="result" id="result"><center>{{ password_res }}</center></span>
 						<br>
 <!--						<button class="social twitter">Login with Twitter</button>-->
