FIXED: Clustering UI

--- a/templates/MLpg.html
+++ b/templates/MLpg.html
@@ -24,9 +24,9 @@
 					</div>
 					<div class="right-box">
 						<span class="signwith">Checking<br />Password Strength</span>
-						<span class="resulthead"><center>Generic Strength</center></span>
+						<span class="resulthead"><center>Strength</center></span>
 						<span class="result" id="generic"><center></center></span>
-						<span class="resulthead"> <center>Smart Strength</center></span>
+						<span class="resulthead"> <center>Probability</center></span>
 						<span class="result" id="result"><center>{{ password_res }}</center></span>
 						<br>
 <!--						<button class="social twitter">Login with Twitter</button>-->
