--- a/static/cssfile.css
+++ b/static/cssfile.css
@@ -129,7 +129,7 @@ input[type="submit"]:focus
 .right-box .resulthead
 {
     display: block;
-    colour: #000000;
+    color: #000000;
     text-align: center;
 }
 
