--- a/templates/MLpg.html
+++ b/templates/MLpg.html
@@ -3,8 +3,7 @@
 
 <head>
 	<title>Password strength checker</title>
-<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro|Open+Sans+Condensed:300|Raleway' rel='stylesheet'
-		type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro|Open+Sans+Condensed:300|Raleway' rel='stylesheet' type='text/css'>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/zxcvbn/4.2.0/zxcvbn.js"></script>
 	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="{{ url_for('static', filename='cssfile.css') }}" />
@@ -12,14 +11,12 @@
 </head>
 <body>
 	<div id="content">
-<!--		<form id="register" method = "POST">-->
 				<div id="login-box">
 					<div class="left-box">
 						<h1>Sign Up</h1>
 							<input type="text" placeholder="Username" id="username" name="Username" value="">
 							<input type="text" placeholder="email" name="email" value="">
 							<input name="password" id="password" type="password" placeholder="Password">
-<!--							<div><center>{{ password_res }}</center></div>-->
 							<input type="submit" name="signup-button" value="submit">
 					</div>
 					<div class="right-box">
@@ -29,12 +26,9 @@
 						<span class="resulthead"> <center>Probability</center></span>
 						<span class="result" id="result"><center>{{ password_res }}</center></span>
 						<br>
-<!--						<button class="social twitter">Login with Twitter</button>-->
-<!--						<button class="social google">Login with Google</button>-->
 					</div>
 					<div class="or">+</div>
 				</div>
-<!--		</form>-->
 	</div>
 </body>
 </html>
